Use typeof() to implement NS_STDCALL_FUNCPROTO so that pointer-to-member types using stdcall work on mingw gcc.  Bug 203137, r=cls, sr=dbaron.