xpcom/base/nscore.h
@@ -77,7 +77,6 @@
 #define NS_IMETHODIMP_(type) type __stdcall
 #define NS_METHOD_(type) type __stdcall
 #define NS_CALLBACK_(_type, _name) _type (__stdcall * _name)
-#define NS_IMETHOD_CALLBACK_(_type, _class, _name) _type (__stdcall _class::* _name)
 #define NS_STDCALL __stdcall
 
 #elif defined(XP_MAC)
@@ -90,7 +89,6 @@
 #define NS_IMETHODIMP_(type) type
 #define NS_METHOD_(type) type
 #define NS_CALLBACK_(_type, _name) _type (* _name)
-#define NS_IMETHOD_CALLBACK_(_type, _class, _name) _type (_class::* _name)
 #define NS_STDCALL
 
 #elif defined(XP_OS2)
@@ -103,7 +101,6 @@
 #define NS_IMETHODIMP_(type) type
 #define NS_METHOD_(type) type
 #define NS_CALLBACK_(_type, _name) _type (* _name)
-#define NS_IMETHOD_CALLBACK_(_type, _class, _name) _type (_class::* _name)
 #define NS_STDCALL
 
 #else
@@ -116,18 +113,34 @@
 #define NS_IMETHODIMP_(type) type
 #define NS_METHOD_(type) type
 #define NS_CALLBACK_(_type, _name) _type (* _name)
-#define NS_IMETHOD_CALLBACK_(_type, _class, _name) _type (_class::* _name)
 #define NS_STDCALL
 #endif
 
 /**
- * Macro for creating function protoypes which use stdcall
+ * Macro for creating typedefs for pointer-to-member types which are
+ * declared with stdcall.  It is important to use this for any type which is
+ * declared as stdcall (i.e. NS_IMETHOD).  For example, instead of writing:
+ *
+ *  typedef nsresult (nsIFoo::*someType)(nsISupports* arg);
+ *
+ *  you should write:
+ *
+ *  typedef
+ *  NS_STDCALL_FUNCPROTO(nsresult, someType, nsIFoo, typeFunc, (nsISupports*));
+ *
+ *  where nsIFoo::typeFunc is any method declared as
+ *  NS_IMETHOD typeFunc(nsISupports*);
+ *
+ *  XXX this can be simplified to always use the non-typeof implementation
+ *  when http://gcc.gnu.org/bugzilla/show_bug.cgi?id=11893 is fixed.
  */
 
 #ifdef __GNUC__
-#define NS_STDCALL_FUNCPROTO(func,args) (func) args NS_STDCALL
+#define NS_STDCALL_FUNCPROTO(ret, name, class, func, args) \
+  typeof(&class::func) name
 #else
-#define NS_STDCALL_FUNCPROTO(func,args) (NS_STDCALL func) args
+#define NS_STDCALL_FUNCPROTO(ret, name, class, func, args) \
+  ret (NS_STDCALL class::*name) args
 #endif
 
 /**
@@ -137,7 +150,6 @@
 #define NS_IMETHODIMP       NS_IMETHODIMP_(nsresult)
 #define NS_METHOD           NS_METHOD_(nsresult)
 #define NS_CALLBACK(_name)  NS_CALLBACK_(nsresult, _name)
-#define NS_IMETHOD_CALLBACK(_class, _name) NS_IMETHOD_CALLBACK_(nsresult, _class, _name)
 
 /**
  * Import/Export macros for XPCOM APIs
